# Ppa

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
include/: ISampleRate.h  SampleRate.h
include/audio/: BitDepth.h  BithDepth.h  Channel.h  IBitDepth.h  IChannel.h  ISampleRate.h  SampleRate.h
include/common/: Math.h  Range.h  String.h
include/common/utils/: libRange.h  libString.cpp  libString.h
include/fsystem/: FSystem.h  IFSystem.h
include/os/: FSystem.h  IFSystem.h
lib/util/: libString.h
src/: Main.cpp  SampleRate.cpp
src/audio/: BitDepth.cpp  CMakeLists.txt  Channel.cpp  SampleRate.cpp
src/fsystem/: CMakeLists.txt  FSystem.cpp
src/os/: CMakeLists.txt  FSystem.cpp
test/: CMakeLists.txt  CMakeLists.txt.in  SampleRate.cpp  SampleRateTest.cpp  SampleRateTest.h  Suite.cpp  example.cpp  samplerate.cpp
test/audio/: CMakeLists.txt  bitdepth_test.cpp  channel_test.cpp  samplerate_test.cpp
test/common/utils/: libRangeTest.cpp  libRangeTest.h  libStringTest.cpp  libStringTest.h  utils.cpp  utils.h
test/os/: CMakeLists.txt  fsystem_test.cpp
